--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     ports:
       - '3000:3000'
     environment:
-      SQLPAD_ADMIN: 'a.saito@renk.co.jp'
-      SQLPAD_ADMIN_PASSWORD: 'admin'
+      SQLPAD_ADMIN: #admin_email
+      SQLPAD_ADMIN_PASSWORD: #admin_password
       SQLPAD_APP_LOG_LEVEL: debug
       SQLPAD_WEB_LOG_LEVEL: warn
       SQLPAD_SEED_DATA_PATH: /etc/sqlpad/seed-data
